# humanize

./: .gitignore  code_of_conduct.rst  contributing.rst  dataset_guide.rst  docker-compose.yml  license.rst  pyproject.toml  readme.rst  web.py
datasets/: data.parquet  features.parquet  humanize.parquet  replacements.parquet  word_frequency.parquet
datasets/books/: romeoandjuliet.txt  yesandno1.txt  yesandno2.txt
humanize/: __init__.py  cli.py  web.py
humanize/data/: dataset.py
humanize/rewrite/: rules.py
humanize/text/: diagnosis.py  simplify.py
scripts/: analyze_distributions.py  build_dataset_bundle.py  build_features.py  build_replacements.py  build_word_frequency.py  diagnosis.py  explore_parquet.py  ingest_gutenberg.py  view_parquet.py
src/: cli.py  flesch.py
src/data/: arrow.py
src/text/: analyzer.py  diagnosis.py
