[project]
name = "humanize"
version = "0.1.0"
description = "An open-source, rule-based system for humanizing text using open datasets and deterministic transformations."
readme = "readme.rst"
requires-python = ">=3.13"
license = "GPL-3.0"
keywords = ["text-processing", "humanization", "nlp", "writing-style"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.13",
]

authors = [{ name = "Rithul Kamesh", email = "hi@rithul.dev" }]
maintainers = [{ name = "Rithul Kamesh", email = "hi@rithul.dev" }]

dependencies = [
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "numpy>=1.26.0",
    "polars>=1.37.1",
    "uuid-utils>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
local-llm = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "langchain-community>=0.3.0",
]
web = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]

[project.scripts]
humanize = "humanize.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["humanize"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
